--- a/act.html
+++ b/act.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Resume</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <p>Astaghfirullah</p>
+    <div class="container">
+        <div class="left_side"></div>
+            <div class="profileText">
+                <div class="imgBx">
+                    <img src=""
+                </div>
+            </div>
+        <div class="right_side"></div>
+    </div>
 </body>
 </html>
