--- a/act.html
+++ b/act.html
@@ -1,3 +1,4 @@
+<!-- https://www.youtube.com/watch?v=hnjHCmaUVPg -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,12 +9,14 @@
 </head>
 <body>
     <div class="container">
-        <div class="left_side"></div>
+        <div class="left_side">
             <div class="profileText">
                 <div class="imgBx">
-                    <img src=""
+                    <img src="self.png">
                 </div>
+                <h2>Rafael Isaiah L. Matienzo<br><span>Systems Analyst</span></h2>
             </div>
+        </div>
         <div class="right_side"></div>
     </div>
 </body>
