--- a/act.html
+++ b/act.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -15,6 +16,40 @@
                     <img src="self.png">
                 </div>
                 <h2>Rafael Isaiah L. Matienzo<br><span>Systems Analyst</span></h2>
+            </div>
+
+            <div class="contactInfo">
+                <h3 class="title">Contact Info</h3>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
+                        <span class="text">09267114959</span>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
+                        <span class="text">202210813@fit.edu.ph</span>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa fa-facebook-official" aria-hidden="true"></i></span>
+                        <span class="text">fb.com/rafael.matienzo.9</span>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa fa-github" aria-hidden="true"></i></span>
+                        <span class="text">github.com/rafmatz</span>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+                        <span class="text">San Juan, Metro Manila, Philippines</span>
+                    </li>
+                </ul>
             </div>
         </div>
         <div class="right_side"></div>
