--- a/act.html
+++ b/act.html
@@ -51,6 +51,48 @@
                     </li>
                 </ul>
             </div>
+
+            <div class="contactInfo education">
+                <h3 class="title">Education</h3>
+                <ul>
+                    <li>
+                        <h5>2016 - 2020</h5>
+                        <h4>Highschool Graduate</h4>
+                        <h4>San Juan Science Highschool</h4>
+                    </li>
+                    <li>
+                        <h5>2020 - 2022</h5>
+                        <h4>Senior Highschool Graduate</h4>
+                        <h4>University of the East - Manila</h4>
+                    </li>
+                    <li>
+                        <h5>2022 - </h5>
+                        <h4>Undergraduate</h4>
+                        <h4>Far Eastern University - Institute of Technology</h4>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="contactInfo language">
+                <h3 class="title">Language</h3>
+                <ul>
+                    <li>
+                        <span class="text">Filipino</span>
+                        <span class="percent">
+                            <div style="width: 97%;"></div>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="text">English</span>
+                        <span class="percent">
+                            <div style="width: 85%;"></div>
+                        </span>
+                    </li>
+                </ul>
+            </div>
+
+
+
         </div>
         <div class="right_side"></div>
     </div>
