--- a/act.html
+++ b/act.html
@@ -15,7 +15,7 @@
                 <div class="imgBx">
                     <img src="self.png">
                 </div>
-                <h2>Rafael Isaiah L. Matienzo<br><span>Systems Analyst</span></h2>
+                <h2>Rafael Isaiah L. Matienzo<br><span>BSITWMA Student</span></h2>
             </div>
 
             <div class="contactInfo">
@@ -66,7 +66,7 @@
                         <h4>University of the East - Manila</h4>
                     </li>
                     <li>
-                        <h5>2022 - </h5>
+                        <h5>2022 - Present</h5>
                         <h4>Undergraduate</h4>
                         <h4>Far Eastern University - Institute of Technology</h4>
                     </li>
@@ -90,11 +90,28 @@
                     </li>
                 </ul>
             </div>
-
-
-
         </div>
-        <div class="right_side"></div>
+
+        <div class="right_side">
+            <div class="about">
+                <h2 class="title2">Profile</h2>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical 
+                    Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at 
+                    Hampden-Sydney College in 
+                    <br><br>
+                    Virginia, looked up one of the more obscure Latin words, consectetur, 
+                    from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered 
+                    the undoubtable source.</p>
+            </div>
+            <div class="about">
+                <h2 class="title2">Experience</h2>
+                <div class="box">
+                    <div class="year_experience">
+                        <h5>2022 - Present</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
