--- a/act.html
+++ b/act.html
@@ -1,4 +1,4 @@
-<!-- https://www.youtube.com/watch?v=hnjHCmaUVPg -->
+<!-- https://www.youtube.com/watch?v=hnjHCmaUVPg 24:35-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -108,9 +108,80 @@
                 <div class="box">
                     <div class="year_experience">
                         <h5>2022 - Present</h5>
+                        <h5>FEU Institute of Technology</h5>
+                    </div>
+                    <div class="text">
+                        <h4>Computer Programming</h4>
+                        <p>Currently, I have went through the subject Computer Programming 1 & 2, Data Structures and 
+                            Algorithms, and Object Oriented Programming. I have learned with handling C++, Java, 
+                            and Python with my current programming subject of Integrative Programming and Technologies.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="year_experience">
+                        <h5>May to June 2022</h5>
+                        <h5>UE Manila - SHS</h5>
+                    </div>
+                    <div class="text">
+                        <h4>Work Immersion</h4>
+                        <p>I was a part of the standard work immersion that is given in Grade 12. The schedule 
+                            was more than 1 week and each day had different topics and activities covered in 
+                            different languages: Python, HTML, CSS, and JavaScript.</p>
                     </div>
                 </div>
             </div>
+
+            <div class="about skills">
+                <h2 class="title2">Professional Skills</h2>
+                <div class="box">
+                    <h4>C++</h4>
+                    <div class="percent">
+                        <div style="width: 70%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>Java</h4>
+                    <div class="percent">
+                        <div style="width: 58%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>Python</h4>
+                    <div class="percent">
+                        <div style="width: 10%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>HTML, CSS, JavaScript</h4>
+                    <div class="percent">
+                        <div style="width: 10%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>Photoshop</h4>
+                    <div class="percent">
+                        <div style="width: 22%;"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>Illustrator</h4>
+                    <div class="percent">
+                        <div style="width: 15%;"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="about interest">
+                <h2 class="title2">Interest</h2>
+                <ul>
+                    <li><i class="fa fa-gamepad" aria-hidden="true"></i>Gaming</li>
+                    <li>Youtube</li>
+                    <li>Reading</li>
+                    <li>Outdoors</li>
+                </ul>
+            </div>
+
+
         </div>
     </div>
 </body>
