6:58PM html css done, js next

--- a/act.html
+++ b/act.html
@@ -166,7 +166,7 @@
                 <div class="box">
                     <h4>Illustrator</h4>
                     <div class="percent">
-                        <div style="width: 15%;"></div>
+                        <div style="width: 12%;"></div>
                     </div>
                 </div>
             </div>
@@ -174,10 +174,10 @@
             <div class="about interest">
                 <h2 class="title2">Interest</h2>
                 <ul>
-                    <li><i class="fa fa-gamepad" aria-hidden="true"></i>Gaming</li>
-                    <li>Youtube</li>
-                    <li>Reading</li>
-                    <li>Outdoors</li>
+                    <li><i class="fa fa-gamepad" aria-hidden="true"></i> Gaming</li>
+                    <li><i class="fa fa-youtube-play" aria-hidden="true"></i> Youtube</li>
+                    <li><i class="fa fa-book" aria-hidden="true"></i> Reading</li>
+                    <li><i class="fa fa-tree" aria-hidden="true"></i> Outdoors</li>
                 </ul>
             </div>
 
